# jules-specs

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  spec-request.yml
.github/workflows/: generate-specs-manual.yml  generate-specs-on-comment.yml  generate-specs-on-issue.yml  publish.yml
docs/: GITHUB_INTEGRATION.md  QUICKSTART_GITHUB.md  WORKFLOWS.md
jules_specs/: __init__.py  __main__.py  cli.py
