[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jules-specs"
version = "0.1.0"
description = "Specification generator using GitHub spec-kit, preparing inputs for jules-planner"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jules Team"}
]
keywords = ["specifications", "spec-kit", "github", "planning", "jules"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
jules-specs = "jules_specs.cli:main"

[project.urls]
Homepage = "https://github.com/maravedi/jules-specs"
Repository = "https://github.com/maravedi/jules-specs"
Issues = "https://github.com/maravedi/jules-specs/issues"

[tool.setuptools]
packages = ["jules_specs"]
